--- a/index.html
+++ b/index.html
@@ -25,31 +25,29 @@
 <main>
 
     <h1 id="MyProjects">My Projects</h1>
-    <div class="flexbox-container">
-        <div class="flexbox-item-1">
-            <h2>Project 1</h2>
-            <a href="https://google.com"><img src="./assets/images/placeholder_image.jpeg" alt="placeholder image"></a>
+    <section class="flexbox-container">
+        <div class="sticker-big">
+            <h2>Accessibility Standards Project</h2>
+            <a href="https://brandonmountan.github.io/module-01-accessibility-standards/"><img src="./assets/images/placeholder_image.jpeg" alt="placeholder image"></a>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Iaculis eu non diam phasellus vestibulum lorem sed risus ultricies. Dolor purus non enim praesent elementum.</p>
         </div>
-        <div class="flexbox-item-2">
+        <div class="sticker-small">
             <h2>Project 2</h2>
             <a href="https://google.com"><img src="./assets/images/placeholder_image.jpeg" alt="placeholder image"></a>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Iaculis eu non diam phasellus vestibulum lorem sed risus ultricies. Dolor purus non enim praesent elementum.</p>
         </div>
-        <div class="flexbox-item-2">
+        <div class="sticker-small">
             <h2>Project 3</h2>
             <a href="https://google.com"><img src="./assets/images/placeholder_image.jpeg" alt="placeholder image"></a>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Iaculis eu non diam phasellus vestibulum lorem sed risus ultricies. Dolor purus non enim praesent elementum.</p>
         </div>
-    </div>  
+    </section>  
 <br>
 <br>
-    <section class="flexbox-container-2">
-        <div>
-        <img src="./assets/images/Headshot.JPG" alt="headshot of Brandon Mountan">
-        </div>
-        <div class="flexbox-item-3">
+    <section class="flexbox-container">
+        <div class="sticker-big">
         <h2 id="AboutMe">About Me</h2>
+        <img src="./assets/images/profile (3).JPG" alt="headshot of Brandon Mountan">
         <br>
             <p>Montana born and raised! I currently live in Holladay, Utah with my significant other and 2 dogs. My hobbies include watching sports, playing video games, 
                 and traveling. I have worked many jobs throughout my adult life but I am currently working at the University of Utah Hospital as a Paramedic. I am
@@ -57,11 +55,13 @@
             </p>
         </div>
     </section>
+    
+    <br>
+    <br>
 
 </main>
     <h4 id="ContactMe">Contact Me</h4>
-        <p>
-            Phone: 406.788.7048
+        <p> Phone: 406.788.7048
             <br>
             Email: brandonmountan1@gmail.com
         </p>
