--- a/index.html
+++ b/index.html
@@ -23,13 +23,18 @@
     </nav>
 
 <main>
-
+    <header>
     <h1 id="MyProjects">My Projects</h1>
+    </header>
     <section class="flexbox-container">
         <div class="sticker-big">
             <h2>Accessibility Standards Project</h2>
-            <a href="https://brandonmountan.github.io/module-01-accessibility-standards/"><img src="./assets/images/placeholder_image.jpeg" alt="placeholder image"></a>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Iaculis eu non diam phasellus vestibulum lorem sed risus ultricies. Dolor purus non enim praesent elementum.</p>
+            <a href="https://brandonmountan.github.io/module-01-accessibility-standards/"><img src="./assets/images/digital-marketing-meeting.jpg" alt="placeholder image"></a>
+            <p>This project was provided by our bootcamp course and starter code was given.
+                The goal of this project was to make the website meet accessibility standards.
+                Some of the major changes included making sure all of the links functioned correctly,
+                adding alt tags to images, and writing notes in the code for other developers to see.
+            </p>
         </div>
         <div class="sticker-small">
             <h2>Project 2</h2>
@@ -42,8 +47,10 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Iaculis eu non diam phasellus vestibulum lorem sed risus ultricies. Dolor purus non enim praesent elementum.</p>
         </div>
     </section>  
+
 <br>
 <br>
+
     <section class="flexbox-container">
         <div class="sticker-big">
         <h2 id="AboutMe">About Me</h2>
@@ -56,14 +63,16 @@
         </div>
     </section>
     
-    <br>
-    <br>
+<br>
+<br>
 
 </main>
+    <footer>
     <h4 id="ContactMe">Contact Me</h4>
         <p> Phone: 406.788.7048
             <br>
             Email: brandonmountan1@gmail.com
         </p>
+    </footer>
 </body>
 </html>
