--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
     <section class="flexbox-container">
         <div class="sticker-big">
-        <h2 id="AboutMe">About Me</h2>
-        <img src="./assets/images/profile (3).JPG" alt="headshot of Brandon Mountan">
+        <h1 id="AboutMe">About Me</h1>
+        <img class="headshot" src="./assets/images/profile (3).JPG" alt="headshot of Brandon Mountan">
         <br>
             <p>Montana born and raised! I currently live in Holladay, Utah with my significant other and 2 dogs. My hobbies include watching sports, playing video games, 
                 and traveling. I have worked many jobs throughout my adult life but I am currently working at the University of Utah Hospital as a Paramedic. I am
@@ -68,7 +68,7 @@
 
 </main>
     <footer>
-    <h4 id="ContactMe">Contact Me</h4>
+    <h3 id="ContactMe">Contact Me</h3>
         <p> Phone: 406.788.7048
             <br>
             Email: brandonmountan1@gmail.com
