--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section class="flexbox-container">
         <div class="sticker-big">
             <h2>Accessibility Standards Project</h2>
-            <a href="https://starlit-mermaid-2652a3.netlify.app/"><img src="./assets/images/digital-marketing-meeting.jpg" alt="placeholder image"></a>
+            <a href="https://starlit-mermaid-2652a3.netlify.app/"><img src="./assets/images/mars.jpg" alt="placeholder image"></a>
             <p>This project was provided by our bootcamp course and starter code was given.
                 The goal of this project was to make the website meet accessibility standards.
                 Some of the major changes included making sure all of the links functioned correctly,
