--- a/index.html
+++ b/index.html
@@ -12,70 +12,93 @@
 </head>
 
 <body>
-    <header>
-        <h1>Brandon Mountan's Portfolio</h1>
-        <p>
-        This is the webpage of Brandon Mountan's portfolio for web development.
-        </p>
-    </header>
-
-    <nav>
-        <a href="#MyProjects">Projects</a>
-        <a href="#AboutMe">About Me</a>
-        <a href="#ContactMe">Contact Me</a>
-    </nav>
+    <div class="container">
+        <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+          <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+            <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
+            <span class="fs-4">Brandon Mountan's Portfolio</span>
+          </a>
+    
+          <ul class="nav nav-pills">
+            <li class="nav-item"><a href="#MyProjects" class="nav-link">Projects</a></li>
+            <li class="nav-item"><a href="#AboutMe" class="nav-link">Bio</a></li>
+            <li class="nav-item"><a href="#ContactMe" class="nav-link">Contact Me</a></li>
+          </ul>
+        </header>
+      </div>
 
 <main>
     <header>
-    <h1 id="MyProjects">My Projects</h1>
+    <h1 id="MyProjects">Projects</h1>
     </header>
-    <section class="flexbox-container">
-        <div class="sticker-big">
-            <h2>Accessibility Standards Project</h2>
-            <a href="https://starlit-mermaid-2652a3.netlify.app/"><img src="./assets/images/mars.jpg" alt="placeholder image"></a>
-            <p>This project was provided by our bootcamp course and starter code was given.
-                The goal of this project was to make the website meet accessibility standards.
-                Some of the major changes included making sure all of the links functioned correctly,
-                adding alt tags to images, and writing notes in the code for other developers to see.
-            </p>
-        </div>
-        <div class="sticker-small">
-            <h2>Project 2</h2>
-            <a href="https://google.com"><img src="./assets/images/placeholder_image.jpeg" alt="placeholder image"></a>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Iaculis eu non diam phasellus vestibulum lorem sed risus ultricies. Dolor purus non enim praesent elementum.</p>
-        </div>
-        <div class="sticker-small">
-            <h2>Project 3</h2>
-            <a href="https://google.com"><img src="./assets/images/placeholder_image.jpeg" alt="placeholder image"></a>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Iaculis eu non diam phasellus vestibulum lorem sed risus ultricies. Dolor purus non enim praesent elementum.</p>
-        </div>
-    </section>  
 
-<br>
-<br>
-
-    <section class="flexbox-container">
-        <div class="sticker-big">
-        <h1 id="AboutMe">About Me</h1>
-        <img class="headshot" src="./assets/images/profile (3).JPG" alt="headshot of Brandon Mountan">
-        <br>
-            <p>Montana born and raised! I currently live in Holladay, Utah with my significant other and 2 dogs. My hobbies include watching sports, playing video games, 
-                and traveling. I have worked many jobs throughout my adult life but I am currently working at the University of Utah Hospital as a Paramedic. I am
-                transitioning out of healthcare and into web development. 
-            </p>
+    <a href="https://starlit-mermaid-2652a3.netlify.app/" target="_blank">
+      <div class="card bg-dark text-white m-5">
+        <img class="card-img" src="./assets/images/mars.jpg" alt="Card image">
+        <div class="card-img-overlay">
+          <h5 class="card-title">Mars Madness</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text">Last updated 3 mins ago</p>
         </div>
-    </section>
-    
-<br>
-<br>
+      </div>
+    </a>
+
+    <div class="card-group m-5">
+        <div class="card">
+          <img class="card-img-top" src="..." alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+          <div class="card-footer">
+            <small class="text-muted">Last updated 3 mins ago</small>
+          </div>
+        </div>
+        <div class="card">
+          <img class="card-img-top" src="..." alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+          </div>
+          <div class="card-footer">
+            <small class="text-muted">Last updated 3 mins ago</small>
+          </div>
+        </div>
+        <div class="card">
+          <img class="card-img-top" src="..." alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+          </div>
+          <div class="card-footer">
+            <small class="text-muted">Last updated 3 mins ago</small>
+          </div>
+        </div>
+      </div>
+
+      <h2 id="AboutMe">About Me</h2>
+
+      <div class="card m-5" style="width: 18rem;">
+        <img class="card-img-top" src="./assets/images/profile (3).JPG" alt="Card image cap">
+        <div class="card-body">
+          <p class="card-text">
+            Montana born and raised! I currently live in Holladay, Utah with my significant other and 2 dogs. My hobbies include watching sports, playing video games, 
+            and traveling. I have worked many jobs throughout my adult life but I am currently working at the University of Utah Hospital as a Paramedic. I am
+            transitioning out of healthcare and into web development. 
+          </p>
+        </div>
+      </div>
 
 </main>
+
     <footer>
     <h3 id="ContactMe">Contact Me</h3>
-        <p> Phone: 406.788.7048
-            <br>
+        <p> 
+            Phone: 406.788.7048
+        <br>
             Email: brandonmountan1@gmail.com
         </p>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" 
